# projetoqtqml

./: .gitignore  CMakeLists.txt  license.md  readme.md
modules/: Compiler.cmake  Platform.cmake  Policies.cmake
src/envia/: CMakeLists.txt  envia.qrc  qtquickcontrols2.conf
src/envia/src/: defs.hpp  envia.cpp  envia.qml  leitor.cpp  leitor.hpp  servidor.cpp  servidor.hpp
src/envia/src/view/: ViewArquivo.qml  ViewComando.qml  ViewEnvia.qml
src/include/: dbus.hpp
src/recebe/: CMakeLists.txt  recebe.qrc
src/recebe/src/: cliente.cpp  cliente.hpp  defs.hpp  recebe.cpp  recebe.qml
src/recebe/src/view/: ViewRecebe.qml  ViewReceber.qml
